@@ -1,5 +1,9 @@
 2009-September-14 Dave Glowacki 
 
+  * update Makefile to compile successfully under Linux/Mac
+
+2009-September-14 Dave Glowacki 
+
   * update manual and alter source code to compile successfully under Linux/Mac
 
 
